meta, smaller font bundle

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#393e46">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
+    <meta name="title" content="bradw - Software Developer">
+    <meta name="author" content="Bradley Watton">
+    <link rel="canonical" href="https://bradleyw.me">
+
     <title>bradw.io</title>
 
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,600&display=swap');
 
       * {
         box-sizing: border-box;
